# edu

./: .config  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  IMPLEMENTATION_PROMPTS.md  MODERNIZATION_ROADMAP.md  README.md  SECURITY_FIXES.md  eslint.config.mjs  flake.nix  netlify.toml  next.config.ts  package-lock.json  package.json  playwright.config.ts  stryker.conf.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  worklog.md
.github/: .gitignore
.github/workflows/: balance-gate.yml  chatbot-build.yml  crdt-convergence.yml  cross-platform-determinism.yml  reproducibility.yml  slsa-provenance.yml  wasm-hash-lock.yml  zk-prove-verify.yml
.zscripts/: build.sh  new-entity.sh  sync-check.sh
cards/: balance.toml
cards/c/: katarina.apo  vivietta.apo
cards/golden/: diana-light_shield.json  gentaro-iron_resolve.json  izumi-venom_strike.json  jen-absolute_strike.json  katarina-swift_assassinate.json  kate-claudia-resonance_guard.json  layla-plasma_strike.json  mina-dimensional_pandict.json  ronan-arthur-centaur_laser.json  run_golden_tests.sh  sebastian-precision_shot.json  vivietta-compassionate_heal.json
cards/r/: gentaro.apo  izumi.apo  sebastian.apo
cards/sr/: diana.apo  jen.apo  kate-claudia.apo  layla.apo  mina.apo  ronan-arthur.apo
crates/: Cargo.toml  rust-toolchain.toml
crates/.cargo/: config.toml
crates/apolon-compiler/: Cargo.toml
crates/apolon-compiler/src/: ast.rs  codegen.rs  effects.rs  error.rs  ir.rs  lexer.rs  lib.rs  opt.rs  optimizer.rs  parser.rs  span.rs  types.rs
crates/edu-battle-engine/: Cargo.toml
crates/edu-battle-engine/benches/: battle_bench.rs
crates/edu-battle-engine/src/: combat.rs  lib.rs  types.rs
crates/edu-crdt-bridge/: Cargo.toml
crates/edu-crdt-bridge/src/: annotation.rs  deck.rs  lib.rs  moderation.rs  pbt.rs  presence.rs  transport.rs  wiki.rs
crates/edu-engine-core/: Cargo.toml
crates/edu-engine-core/src/: bounded_hp.rs  damage.rs  fsm.rs  lib.rs  proofs.rs  rng.rs  simd.rs  tlv.rs  types.rs
crates/edu-engine-embedded/: Cargo.toml  link.x
crates/edu-engine-native/: Cargo.toml
crates/edu-engine-native/benches/: engine_bench.rs
crates/edu-engine-native/src/: lib.rs
crates/edu-engine-wasm/: Cargo.toml
crates/edu-engine-wasm/src/: lib.rs
crates/edu-pqc/: Cargo.toml
crates/edu-prover/: Cargo.toml
crates/edu-prover/src/: commitment.rs  lib.rs  merkle.rs  replay.rs  types.rs
crates/edu-quasi/: Cargo.toml
crates/edu-quasi/src/: circuit.rs  lib.rs  parser.rs  state.rs
crates/edu-verifier/: Cargo.toml
crates/edu-verifier/src/: lib.rs  verify.rs
db/: custom.db
docs/: lore-tech-mapping-eta.md  lore-tech-mapping-zeta.md  lore-tech-mapping.md
docs/adr/: 0001-no_std-core-extraction.md  0002-quantum-substrate.md  0003-apolon-dsl.md  0004-webgpu-compute-pipeline.md  0005-zk-replay-verification.md  0006-lean-as-engine-load-bearing.md  0007-hermeticity-as-zk-prerequisite.md  0008-crdt-three-deep-integrations.md
docs/apolon/: grammar.md
docs/proofs/: axioms-report.md
docs/security/: pqc-threat-model.md
download/: iris_story.json
edu/: README.md  fix_descriptions.py  package.json  tsconfig.json
edu/prisma/: schema.prisma
eslint-rules/: no-cross-domain-import.js  require-jsdoc.js
examples/websocket/: server.ts
lore/: Auralishentai.txt  Auralishentai_EN.txt  DianaWorld.txt  DianaWorld_EN.txt  Gentaroworld.txt  Gentaroworld_EN.txt  IRIS_1.txt  IRIS_1_EN.txt  IRIS_2.txt  IRIS_2_EN.txt  IRIS_3.txt  IRIS_3_EN.txt  IRIS_4.txt  IRIS_4_EN.txt  Jenstoryep1.txt  Jenstoryep1_JP.txt  Jenstoryep2.txt  Jenstoryep2_JP.txt  Jenstoryep3.txt  Jenstoryep3_JP.txt  Junandslime.txt  Junandslime_JP.txt  LAYLA.txt  LAYLA_JP.txt  Myustory.txt  Myustory_JP.txt  eduuni_EN.txt  gue.txt  gue_EN.txt  kasuteriasan.txt  kasuteriasan_EN.txt  kateclaudiaandlilliesteiner.txt  kateclaudiaandlilliesteiner_EN.txt  laylastats.txt  laylastats2_JP.txt  nebura.txt  nebura_EN.txt  sitra.txt  sitra_EN.txt  unified-history_EN.txt  (+2 more)
prisma/: schema.prisma  seed-pve.ts  seed.ts
public/: sw.js
public/data/: cards.edu  civilizations.edu  enemies.edu  wiki.edu
public/rag/: manifest.json
public/wasm/: edu_battle_engine.js  edu_battle_engine_bg.wasm
quantum/: apolonium_field.py  pyproject.toml
scripts/: build-rag-index.ts  capture-baseline.sh  check-lore-integration.mjs  cosign-sign.sh  frame-time-histogram.mjs  generate-sbom.sh  measure-bundle-size.sh  validate-data.ts
skills/ASR/: SKILL.md
skills/LLM/: SKILL.md
skills/TTS/: SKILL.md  tts.ts
skills/VLM/: SKILL.md
skills/code-review/: SKILL.md
skills/db-migration/: SKILL.md
skills/devops/: SKILL.md
skills/fullstack-dev/: SKILL.md
skills/image-edit/: SKILL.md
skills/image-generation/: SKILL.md
skills/image-understand/: SKILL.md
skills/incident-response/: SKILL.md
skills/multi-search-engine/: CHANNELLOG.md  SKILL.md
skills/pdf/: SKILL.md
skills/performance-audit/: SKILL.md
skills/podcast-generate/: generate.ts
skills/ppt/: SKILL.md  components.md  html2pptx.md  themes.md
skills/skill-vetter/: SKILL.md
skills/stock-analysis-skill/: SKILL.md
skills/testing/: SKILL.md
skills/video-generation/: SKILL.md
skills/video-understand/: SKILL.md
skills/web-reader/: SKILL.md
skills/web-search/: SKILL.md
src/: AGENTS.md
src/_infra/: README.md  pack-data.ts  validate-data.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  robots.ts  sitemap.ts
src/hooks/: use-toast.ts
src/l0-metal/: index.ts  service-worker-registration.ts  wasm-engine.ts
src/l2-datalink/: index.ts
src/l3-network/: index.ts
src/l4-transport/: index.ts
src/l5-session/: battle-fsm.ts  index.ts
src/l6-presentation/: index.ts
src/l7-application/: index.ts
src/lib/: battle-logic.ts  card-data.ts  civilization-data.ts  db.ts  faction-data.ts  game-engine.ts  game-store.ts  iris-data.ts  lang.ts  liminal-data.ts  mina-data.ts  relation-data.ts  schemas.ts  stories.ts  tech-data.ts  (+3 more)
tree-sitter-apolon/: README.md  grammar.js  package.json
(+455 files in other folders)
