[project]
name = "edu-quantum"
version = "0.1.0"
description = "Apolonium quantum probability layer — Qiskit 8-qubit simulation for EDU battle engine"
requires-python = ">=3.12"
dependencies = [
    "qiskit>=1.3,<2",
    "qiskit-aer==0.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
