[package]
name = "edu-crdt-bridge"
version = "0.1.0"
edition = "2021"
description = "CRDT bridge layer — Automerge documents for multi-user game surfaces"

[features]
default = ["std"]
std = ["serde/std", "edu-engine-core/std", "alloc"]
alloc = []

[dependencies]
edu-engine-core = { path = "../edu-engine-core", features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", optional = true }
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"
