[package]
name = "edu-engine-core"
version = "0.1.0"
edition = "2021"
description = "no_std battle engine core — zero-heap, target-independent, formally verified"

[features]
default = ["std"]
std = ["serde/std", "alloc"]
alloc = []
simd = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
