[package]
name = "edu-engine-native"
version = "0.1.0"
edition = "2021"
description = "Native benchmarks + extended test harness for edu-engine-core"

[dependencies]
edu-engine-core = { path = "../edu-engine-core", features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false
