[package]
name = "edu-engine-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen shell — only this crate touches JS"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
edu-engine-core = { path = "../edu-engine-core", features = ["std"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
