[package]
name = "edu-prover"
version = "0.1.0"
edition = "2021"
description = "ZK-verifiable battle replay prover — Merkle commitment + hash-based integrity proofs"

[features]
default = ["std"]
std = ["serde/std", "edu-engine-core/std", "sha2/std"]
alloc = ["edu-engine-core/alloc"]

[dependencies]
edu-engine-core = { path = "../edu-engine-core" }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", optional = true }

[dev-dependencies]
edu-engine-core = { path = "../edu-engine-core", features = ["std"] }
serde_json = "1"
