[package]
name = "edu-verifier"
version = "0.1.0"
edition = "2021"
description = "Browser-side ZK replay verifier — WASM bridge for commitment verification"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
edu-prover = { path = "../edu-prover" }
edu-engine-core = { path = "../edu-engine-core", features = ["std"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
edu-engine-core = { path = "../edu-engine-core", features = ["std"] }
